Closed Bug 1425271 Opened 7 years ago Closed 7 years ago

Crash in nsTArray_Impl<T>::IndexOf<T> | nsDisplayItem::~nsDisplayItem

Categories

(Core :: Web Painting, defect, P1)

59 Branch
Unspecified
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox-esr52 --- unaffected
firefox57 --- unaffected
firefox58 --- unaffected
firefox59 --- fixed

People

(Reporter: calixte, Assigned: mikokm)

References

Details

(Keywords: crash, regression, topcrash)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-de5c6f27-729e-4ebd-bf22-5cdf50171214. ============================================================= Top 10 frames of crashing thread: 0 xul.dll nsTArray_Impl<mozilla::FrameProperties::PropertyValue, nsTArrayInfallibleAllocator>::IndexOf<mozilla::FramePropertyDescriptorUntyped const*, mozilla::FrameProperties::PropertyComparator> xpcom/ds/nsTArray.h:1156 1 xul.dll nsDisplayItem::~nsDisplayItem layout/painting/nsDisplayList.h:1921 2 xul.dll nsDisplayWrapList::`scalar deleting destructor' 3 xul.dll nsDisplayWrapList::Destroy layout/painting/nsDisplayList.h:4659 4 xul.dll nsDisplayWrapList::Destroy layout/painting/nsDisplayList.h:4658 5 xul.dll nsDisplayListBuilder::~nsDisplayListBuilder layout/painting/nsDisplayList.cpp:1303 6 xul.dll RetainedDisplayListBuilder::`scalar deleting destructor' 7 xul.dll mozilla::FramePropertyDescriptor<RetainedDisplayListBuilder>::Destruct<&DeleteValue<RetainedDisplayListBuilder> layout/base/FrameProperties.h:102 8 xul.dll mozilla::FrameProperties::PropertyValue::DestroyValueFor layout/base/FrameProperties.h:376 9 xul.dll mozilla::FrameProperties::DeleteAll layout/base/FrameProperties.h:295 ============================================================= There 156 crashes in nightly 59 with buildid 20171214100315. :miko, could you investigate please ?
Flags: needinfo?(mikokm)
Priority: -- → P1
This seems to be caused by temporary display items getting deleted without nsDisplayItem::RemoveFrame() getting called.
Assignee: nobody → mikokm
Status: NEW → ASSIGNED
Flags: needinfo?(mikokm)
Reproducible for me sometimes when I surf in this page: https://www.fxp.co.il/forumdisplay.php?f=45 This URL is on a tab which I never close. After a while when I get back to this tab, I (often) get this crash. https://crash-stats.mozilla.com/report/index/62108e86-30c7-45aa-9147-222a90171214 https://crash-stats.mozilla.com/report/index/7582248f-b110-4735-be7d-9c2770171214
Assignee: mikokm → nobody
Status: ASSIGNED → NEW
Assignee: nobody → mikokm
Status: NEW → ASSIGNED
Adding a Mac/Linux signature.
Crash Signature: [@ nsTArray_Impl<T>::IndexOf<T> | nsDisplayItem::~nsDisplayItem] → [@ nsTArray_Impl<T>::IndexOf<T> | nsDisplayItem::~nsDisplayItem] [@ nsIFrame::RemoveDisplayItem ]
See Also: → 1425423
The crash signature is ranked #3 in nightly 59 for content process.
Keywords: topcrash
Attachment #8937197 - Flags: review?(matt.woodrow) → review+
Pushed by mikokm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/229639982d5b Improve temporary display item removal r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: