Bug 1425271 - Improve temporary display item removal r=mattwoodrow

MozReview-Commit-ID: FBDuGice0DU